src/test/compile-fail/vector-no-ann.rs
// xfail-stage0

// error-pattern:Ambiguous type
fn main() -> () {
  auto foo = [];
}
